- bios/cookie.c - number of free slots corrected (joy)
- bios/machine.c - COOKIE_NATFEAT created (joy)
- bios/startup.S, bios/disk.c, bios/machine.c - NatFeat instruction codes
  changed to LineF $fe00/$fe01 (joy)

20. Oct. 2002
- bios/startup.S, bios/disk.c, bios/machine.c - NatFeat instruction codes
  changed back to good old $7300/$7301. The LineF interface requires
  the $fe0x instructions to be long words and I am not ready to accept
  such change of NatFeat calling convention. Sorry. (joy)

28. Oct. 2002
- bios/bios.c - loading of AUTO folder programs displayed on stderr console
  via new NF_STDERR (sorry for the mess in bios.c, the nf calling must be
  cleaned up somehow). (joy)

31. Oct. 2002
- Makefile - changed, so that vdi/lisaesc.S is used again (MAD)
- aes/gemdosif.S - changed to lowercase and put _back after entry (MAD)

02. Nov. 2002
- aes/geminit.c - held Ctrl key causes not loading the ACCs (joy)

03. Nov. 2002
- bios/xhdi.[ch] - XHDI implemented - allows running FreeMiNT (joy)
- bios/disk.c - some functions moved to the xhdi.c (joy)
- bios/blkdev.c - initialization order changed (joy)
- bios/machine.c - add XHDI cookie to the jar (joy)
- bios/startup.S - XHDI entry point (joy)
- bios/initinfo.c - missing #include (joy)

07. Nov. 2002
- util/intmath.c - central impl. of (s)mul_div()    (MAD)
- aes/gemdosif.h - change tikaddr and tiksav to void *  (MAD)

09. Nov. 2002
- aes/gemgsxif.c - changed i_lptr1 to use just one argument (MAD)

16. Nov. 2002
- aes/gemdisp.c - schedule() loop now sleeps with the STOP #2300 insn (joy)

22. Nov. 2002
- vdi/vdimain.c - change timer vectors to be used as pointers (MAD)

13. Jan. 2003
- bios/natfeat.[hS] - NatFeat stuff moved to separate files (joy)
- bios/startup.S, bios/machine.c - cleaned up (joy)
- "__NF" cookie now contains pointer to the NatFeat structure with
  function pointers (joy)

14. Jan. 2004
- bios/vectors.S - the scceenpt must be cleared after successful video
  registers update (joy)